<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView android:id="@+id/status"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/attrs"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="3dp"
              android:layout_marginBottom="3dp"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <Button android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/command_play"
                android:onClick="onPlayButtonClick"/>

        <Button android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/command_stop"
                android:onClick="onStopButtonClick"/>

        <Button android:id="@+id/pauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/command_pause"
                android:onClick="onPauseButtonClick"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <Button android:id="@+id/prevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/command_prev"
                android:onClick="onPrevButtonClick"/>

        <Button android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/command_next"
                android:onClick="onNextButtonClick"/>

        <Button android:id="@+id/getAttrsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/command_get_attrs"
                android:onClick="onGetAttrsButtonClick"/>

    </LinearLayout>

</LinearLayout>

